<resources>
    <string name="app_name">Matta Chat</string>
    <string name="developed_by_crazzy_novus">Developed by Crazzy_Novus</string>
    <string name="enter_the_mobile_number">Enter the mobile Number</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="next">Next</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="resend_otp_in_30_sec">Resend OTP in 30 sec</string>
    <string name="enter_otp_send_to_mobile_number">Enter Otp send To mobile Number</string>
    <string name="user_name">User Name</string>
    <string name="enter_your_username">Enter your userName</string>
    <string name="let_me_in">LET ME IN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="logout">Logout</string>
    <string name="update_profile">Update profile</string>
    <string name="back_button_description">back_button_description</string>
    <string name="search_user_button_description">search_user_button_description</string>
</resources>